--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -10,7 +10,8 @@ on enable-low-power
 
     # HMP scheduler settings
     write /proc/sys/kernel/sched_window_stats_policy 3
-    write /proc/sys/kernel/sched_ravg_hist_size 5
+    write /proc/sys/kernel/sched_ravg_hist_size 3
+    write /proc/sys/kernel/sched_ravg_window 20000000
 
     # HMP Task packing settings
     write /proc/sys/kernel/sched_small_task 20
@@ -36,7 +37,7 @@ on enable-low-power
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/io_is_busy 0
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads "1 960000:85 1113600:90 1344000:80"
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 50000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 960000
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 200000
 
     # Enable governor for power cluster
     write /sys/devices/system/cpu/cpu4/online 1
@@ -48,7 +49,7 @@ on enable-low-power
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/io_is_busy 0
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/target_loads "1 800000:90"
     write /sys/devices/system/cpu/cpu4/cpufreq/interactive/min_sample_time 40000
-    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 800000
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 200000
 
     # Enable thermal core_control now
     write /sys/module/msm_thermal/core_control/enabled 1
@@ -57,36 +58,26 @@ on enable-low-power
     write /sys/devices/system/cpu/cpu1/online 1
     write /sys/devices/system/cpu/cpu2/online 1
     write /sys/devices/system/cpu/cpu3/online 1
+    write /sys/devices/system/cpu/cpu4/online 1
     write /sys/devices/system/cpu/cpu5/online 1
     write /sys/devices/system/cpu/cpu6/online 1
     write /sys/devices/system/cpu/cpu7/online 1
 
-    # Enable low power modes
-    write /sys/module/lpm_levels/parameters/sleep_disabled 0
+    # Enable power_efficient workqueue
+    #write /sys/module/workqueue/parameters/power_efficient 1
 
-    # Enable core control
-    write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 2
-    write /sys/devices/system/cpu/cpu0/core_ctl/max_cpus 4
-    write /sys/devices/system/cpu/cpu0/core_ctl/busy_up_thres 68
-    write /sys/devices/system/cpu/cpu0/core_ctl/busy_down_thres 40
-    write /sys/devices/system/cpu/cpu0/core_ctl/offline_delay_ms 100
-    write /sys/devices/system/cpu/cpu0/core_ctl/task_thres 4
-    write /sys/devices/system/cpu/cpu0/core_ctl/is_big_cluster 1
-    write /sys/devices/system/cpu/cpu4/core_ctl/busy_up_thres 20
-    write /sys/devices/system/cpu/cpu4/core_ctl/busy_down_thres 5
-    write /sys/devices/system/cpu/cpu4/core_ctl/offline_delay_ms 5000
-    write /sys/devices/system/cpu/cpu4/core_ctl/not_preferred 1
-    chown system system /sys/devices/system/cpu/cpu0/core_ctl/max_cpus
+    # Enable low power modes
+    write /sys/module/lpm_levels/parameters/sleep_disabled N
 
     # HMP scheduler (big.Little cluster related) settings
-    write /proc/sys/kernel/sched_upmigrate 75
-    write /proc/sys/kernel/sched_downmigrate 60
+    write /proc/sys/kernel/sched_upmigrate 93
+    write /proc/sys/kernel/sched_downmigrate 83
 
     rm /data/system/perfd/default_values
     start perfd
 
 on charger
-    write /sys/module/lpm_levels/parameters/sleep_disabled 0
+    write /sys/module/lpm_levels/parameters/sleep_disabled N
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "powersave"
 
 on property:init.svc.recovery=running
