piccolo: Fix Thermal config device fields + add sampling
 E  [403/403] ThermalEngine Error with field 'device'

ref: https://github.com/LineageOS/android_device_motorola_msm8916-common/blob/lineage-17.1/configs/thermal-engine.conf

--- a/configs/thermal-engine.conf
+++ b/configs/thermal-engine.conf
@@ -11,6 +11,8 @@
 #debug
 #Conf file: /system/etc/thermal-engine.conf
 
+sampling         5000
+
 #######################################
 #   SINGLE STEP FREQUENCY REDUCTION   #
 #######################################
@@ -18,7 +20,7 @@
 #algo_type       ss
 sampling         250
 sensor           pop_mem
-device           cluster1
+device           cpu
 set_point        56000
 set_point_clr    53000
 device_max_limit 960000
@@ -28,7 +30,7 @@ time_constant    2
 #algo_type     ss
 sampling       50
 sensor         cpu4-5-6-7
-device         cluster0
+device         cpu
 set_point      85000
 set_point_clr  55000
 time_constant  0
@@ -37,7 +39,7 @@ time_constant  0
 #algo_type     ss
 sampling       50
 sensor         cpu3
-device         cluster1
+device         cpu
 set_point      85000
 set_point_clr  55000
 time_constant  0
@@ -46,7 +48,7 @@ time_constant  0
 #algo_type     ss
 sampling       50
 sensor         cpu2
-device         cluster1
+device         cpu
 set_point      85000
 set_point_clr  55000
 time_constant  0
@@ -55,7 +57,7 @@ time_constant  0
 #algo_type     ss
 sampling       50
 sensor         cpu1
-device         cluster1
+device         cpu
 set_point      85000
 set_point_clr  55000
 time_constant  0
@@ -64,7 +66,7 @@ time_constant  0
 #algo_type     ss
 sampling       50
 sensor         cpu0
-device         cluster1
+device         cpu
 set_point      85000
 set_point_clr  55000
 time_constant  0
@@ -130,14 +132,14 @@ action_info 1+1 2+2
 algo_type        monitor
 sensor           pop_mem
 sampling         1000
-thresholds       61000   68000    
-thresholds_clr   57000   64000     
+thresholds       61000   68000
+thresholds_clr   57000   64000
 actions          battery battery
-action_info      0       1 
+action_info      0       1
 
 #######################################
 #   VOLTAGE RESTRICTION               #
-#######################################  
+#######################################
 [VDD_RSTR_MONITOR-TSENS9]
 #algo_type monitor
 sampling 1000
